# mda

./: 01_simple_finetune_colab.ipynb  03_quick_test.py  05_test_marcus_model.py  8B_llama.ipynb  8B_llama_wandb_disabled_code.py  README_finetune.md  agent_dataset.py  bio_marcus_chen.md  bio_marcus_chen_rules.csv  classifier_joy.py  csv_space_replacer.py  hf_upload.py  main.py  pyproject.toml  quick_test_output.md  requirements.txt  sft_Llama_3_1_8b_+_Unsloth_2x_faster_finetuning.ipynb  sft_decision_making.md  sft_marcus.jsonl  sft_marcus_lite.jsonl  sft_marcus_lite2.jsonl  sft_prepare_decison_dataset.py  sft_train_hf.py  simple_finetune.py  unsloth_complete_example.py  values_emotions_dataset_joy_modified_reversed.csv
data/: bio.csv  bio_extraction_summary.md  bio_marcus_chen_style_prompt.md  bio_training_data.jsonl  biography_extractor.py  csv_second_UPPER.py  csv_space_replacer.py  sft_marcus.jsonl  sft_marcus_lite.jsonl  sft_marcus_lite2.jsonl  sft_merge_all_datasets.py  sft_prepare_dataset.py  swap_first_third.py  test_marcus_model.py  values_emotions_dataset_anger_modified_modified.csv  values_emotions_dataset_anger_modified_modified_reversed.csv  values_emotions_dataset_fear_modified_modified.csv  values_emotions_dataset_fear_modified_modified_reversed.csv  values_emotions_dataset_joy_modified_modified.csv  values_emotions_joy.csv
prompts/: colab.md
sft_runpod/: Week_7_Day_1_qlora_intro.ipynb  Week_7_Day_2_base_model_evaluation.ipynb  llama_chat.py  llama_claude_colab.ipynb  sft_train_hf.py
tiny_llama/: 02_simple_fine_tune_colab_python.py  03_quick_test.py  (+3 more)
